fix/style: Ensure hover effects are aligned
- Remove Padding from .logo-container.

- Adjust height property to change line-hover length.

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,11 +7,10 @@
 
   .logo-container {
     text-align: center;
-    height: 50%;
+    height: 58%;
     left: 3.5rem;
     top: 1rem;
     width: 70px;
-    padding: 15px 15px;
     position: relative;
   }
 
